--- a/aBlog/members/templates/registration/login.html
+++ b/aBlog/members/templates/registration/login.html
@@ -16,7 +16,9 @@
             
             <input type="password" class="form-control" name="password" placeholder="Password">
           </div>
-
+          {% if form.errors %}
+            <p style="color: red;">Username and Password did not match.</p>
+          {% endif %}
         
         <button class="btn btn-secondary">Login</button>
     </form>
